User can like and dislike answers

--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -87,7 +87,7 @@
       margin-bottom: 10px
     .meta
       .meta_block
-        .question-like_links
+        .like_links
           display: inline
           span
             margin-left: 7px
@@ -130,6 +130,11 @@
       margin-left: 10px
       font-size: 14px
       .tool
+        .like_links
+          display: inline
+          span
+            margin-left: 7px
+            margin-right: 7px
         margin-right: 10px
         display: inline
         a
