--- a/app/views/votes/destroy.js.erb
+++ b/app/views/votes/destroy.js.erb
@@ -1,1 +1,1 @@
-$('[data-like-link]').html("<%= j render 'votes/like_links', resource: parent %>");
+$("[data-like-link=<%= parent.class.name.downcase %>-<%= parent.id %>]").html("<%= j render 'votes/like_links', resource: parent %>");
