--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -1,9 +1,9 @@
-= simple_form_for @question, role: "form", remote: true, authenticity_token: true do |f|
+= simple_form_for resource, role: "form", remote: true, authenticity_token: true do |f|
   = f.input :title, autofocus: true, :input_html => {maxlength: 255}
   = f.input :body, :input_html => {:rows => 8, maxlength: 6000}
   = f.input :tag_list, :input_html => {maxlength: 255, :"data-role" => "tagsinput"}, label: 'Tags'
-  = render 'attachments/attachments_upload_and_list', object: @question
-  = f.submit class: "btn btn-info", id: "submit_question_#{@question.new_record? ? 'new' : @question.id}"
+  = render 'attachments/attachments_upload_and_list', object: resource
+  = f.submit class: "btn btn-info", id: "submit_question_#{resource.new_record? ? 'new' : resource.id}"
 
-= render 'attachments/form', object: @question
+= render 'attachments/form', object: resource
 
