Abilities and cancan

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -4,10 +4,11 @@
       = link_to answer.user.nick, user_path(answer.user)
       | :
     .answer_tools
-      - if answer.user == current_user
+      - if can?(:update, answer)
         .tool
           = link_to edit_question_answer_path(answer.question, answer), remote: true, class: 'answer_edit_icon' do
             span.fui-new
+      - if can?(:destroy, answer)
         .tool
           = link_to question_answer_path(answer.question, answer), remote: true, method: :delete, class: 'answer_delete_icon' do
             span.glyphicon.glyphicon-trash
