--- a/app/views/votes/_like_links.html.slim
+++ b/app/views/votes/_like_links.html.slim
@@ -1,8 +1,8 @@
 div.like_links
-  - if current_user
-    - if resource.voted?(current_user)
+  - if signed_in?
+    - if resource.voted?(current_user) && can?(:destroy, Vote)
       =link_to "Don't like it", send("#{resource.class.name.downcase}_dislike_path", resource), remote: true, method: :delete
-    - else
+    - elsif !resource.voted?(current_user) && can?(:like, resource)
       =link_to 'Like it', send("#{resource.class.name.downcase}_like_path", resource), remote: true, method: :post
   - else
       = link_to 'Like it', '#', data: {target: "#signin_modal", toggle: "modal"}
@@ -12,6 +12,8 @@ div.like_links
       ' You
     - if resource.votes.size > 1
       ' and
-    =' pluralize(resource.votes.size, 'person')
+    =' pluralize(resource.votes.size, 'person') if resource.votes.size > 1 || !signed_in?
     ' like it
+  - else
+    | No one vote yet
 
