14 Lesson was finished

--- a/app/views/votes/_like_links.html.slim
+++ b/app/views/votes/_like_links.html.slim
@@ -15,5 +15,5 @@ div.like_links
     =' pluralize(resource.votes.size, 'person') if resource.votes.size > 1 || !signed_in?
     ' like it
   - else
-    | No one vote yet
+    | No one voted yet
 
